<resources>
    <string name="app_name">Anime</string>
    <string name="title_base_module">base</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="verify">Verify</string>
    <string name="continue_">Continue</string>
    <string name="facebook_app_id">854965008646554</string>
    <string name="fb_login_protocol_scheme">fb854965008646554</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="anime">Anime +</string>
    <string name="send_otp"><i><u>Send opt</u></i></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="privacy_agreement"><u>Privacy agreement</u></string>
    <string name="go_to_home"><i>Go to home </i></string>
    <string name="history">History</string>
    <string name="dowload">Dowload</string>
    <string name="saved_list">Saved list</string>
    <string name="subcribe">Subcribe</string>
    <string name="new_list">New list</string>
    <string name="vote_now">Vote now</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="write_archive">Write Archive ...</string>
    <string name="remove">Remove</string>
    <string name="action">Action</string>
    <string name="what_is_the_problem_here">What is the problem here ?</string>
    <string name="problem_here">Problem here ...</string>
    <string name="please_type_in">Please type in</string>
    <string name="warning">Warning !</string>
    <string name="you_reported_this_comment_are_you_sure_you_want_to_continue_to_report">You reported this comment. Are you sure you want to continue to report ?</string>
</resources>