<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_0sdp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            style="@style/TextBlack15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textStyle="bold" />
        <TextView
            style="@style/TextBlack11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/you_reported_this_comment_are_you_sure_you_want_to_continue_to_report"
            android:textAlignment="center"
             />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_close"
                style="@style/TextBlack11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/close"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/btn_delete"
                style="@style/TextBlack11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/color_orange_900"
                android:maxLines="1"
                android:text="@string/submit"
                android:textColor="@color/white_50" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>