<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_30sdp"
    android:orientation="vertical">

    <TextView
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/subcribe" />
    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_subcribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        <TextView
            android:id="@+id/tv_sub_null"
            style="@style/TextBlack15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Series not exist"
            android:textAlignment="center"
            android:textColor="@color/color_orange_900"
            />
    </RelativeLayout>

    <include
        layout="@layout/item_divider_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp" />
    <TextView
        android:id="@+id/tv_history"
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:text="@string/history"
        app:drawableStartCompat="@drawable/ic_history" />
    <TextView
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:text="@string/dowload"
        app:drawableStartCompat="@drawable/ic_download" />
    <include
        layout="@layout/item_divider_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"/>
    <TextView
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_list" />
    <TextView
        android:id="@+id/btn_add_archive"
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:textColor="@color/color_blue_text"
        android:text="@string/new_list"
        app:drawableStartCompat="@drawable/ic_add"
        app:drawableTint="@color/color_blue_text" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>