<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_0sdp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            style="@style/TextBlack15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/vote_now"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_archive"
            style="@style/TextBlack11"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit"
            android:paddingHorizontal="@dimen/_5sdp"
            android:hint="@string/write_archive"
            android:maxLength="200"
            android:maxLines="1"
            android:padding="@dimen/_10sdp" />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_close"
                style="@style/TextBlack11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/close"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_submit"
                style="@style/TextBlack11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/color_orange_900"
                android:text="@string/submit"
                android:maxLines="1"
                android:textColor="@color/white_50" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>