<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/divider_top"
        layout="@layout/item_divider_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/TextBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/what_is_the_problem_here" />

    <EditText
        android:id="@+id/et_problem"
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/border_edit"
        android:hint="@string/problem_here"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_5sdp" />

    <TextView
        style="@style/TextBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/what_is_the_problem_here" />

    <EditText
        android:id="@+id/et_more_report"
        style="@style/TextBlack11"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/border_edit"
        android:hint="@string/please_type_in"
        android:maxLength="300"
        android:padding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/btn_submit"
        style="@style/TextWhite13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:backgroundTint="@color/color_orange_900"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/submit"
        android:textStyle="bold"
        app:shapeAppearance="?attr/shapeAppearanceLargeComponent" />
</LinearLayout>